1999-10-08  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	Bugfix: Given method M1 with specializers S1, ..., Sk and M2 with
	specializers S1, ..., Sk, Sk+1, ... (specializers S1, ..., Sk same
	as for M1), a call to M2 got a cache hit on M1 if M1 had been used
	before.  This is fixed with the following changes:
	
	* dispatch.scm (method-cache-install!): Don't initialize
	n-specialized here.

	* goops.scm (internal-add-method!): Set n-specialized to the
	number of specializers + 1 for rest arg specializers.

	* goops.c (scm_sys_invalidate_method_cache_x): Initialize
	n-specialized in the method cache here.

1999-09-21  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* dispatch.scm (memoize-method!): Bugfix: Handle no-applicable
	cases with zero arguments.

1999-09-20  Mikael Djurfeldt  <mdj@mdj-pc.nada.kth.se>

	* goops.c, goops.h (scm_generic_capability_p): New procedure.

	* goops.scm (add-method!): Use `generic-capability?' to generate
	nice error message in case we try to add a method to a procedure
	which can't be upgraded to a primitive-generic.

1999-09-19  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* goops.scm (define-method): Don't automatically pick up a
	pre-existing procedure as default method if a binding with the
	same name as the generic function referred to exists.  Instead
	require that it really is a generic function, or equivalent.

1999-09-15  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* README, goops.texi (Introduction): Revised the presentation of
	GOOPS in line with suggestion from Per Bothner.

	* describe.scm (safe-class-name): New procedure: Checks that the
	class has a name before calling class-name.  Use it throughout
	instead of class-name.  (Thanks to Bernard Urban.)

	* goops.scm, goops.c, goops.texi, README (write-object,
	display-object): Removed.  Instead use the new primitive generics
	`display' and `write'.

1999-09-07  Mikael Djurfeldt  <mdj@mdj-pc.nada.kth.se>

	* goops.scm (primitive-generic-generic): Exported.
